--- a/app/views/notifications/send_notification.html.slim
+++ b/app/views/notifications/send_notification.html.slim
@@ -4,7 +4,7 @@ link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/
 script crossorigin="anonymous" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" 
 
 .container.mt-2
-  form#notify-form role="form" method="POST" name="f1" action="https://dev.neetprep.com/api/v1/job/importantNewsNotification"
+  form#notify-form role="form" method="POST" name="f1" action="https://www.neetprep.com/api/v1/job/importantNewsNotification"
     .form-group
       lable for="title" Title
       input#title.form-control type="text" placeholder="Message Title" name="title" required="true"
