--- a/app/views/notifications/send_notification.html.slim
+++ b/app/views/notifications/send_notification.html.slim
@@ -59,7 +59,7 @@ javascript:
       $(".actionUrlGroup").show();
       $(".courseSelectGroup").hide();
       $("#courses-input").val("");
-      $("#courses-input").attr('required', 'false');
+      $("#courses-input").removeAttr('required');
     }
   }
 
