--- a/app/views/admin/video_annotations/_tinymce.html.erb
+++ b/app/views/admin/video_annotations/_tinymce.html.erb
@@ -53,6 +53,6 @@
 <style>
 .mce-tinymce.mce-container.mce-panel {
   display: inline-block !important;
-  width: calc(80% - 22px) !important;
+  width: auto !important;
 }
 </style>
