--- a/app/views/admin/video_links/_tinymce.html.erb
+++ b/app/views/admin/video_links/_tinymce.html.erb
@@ -54,6 +54,6 @@ tinymce.init({
 <style>
 .mce-tinymce.mce-container.mce-panel {
   display: inline-block !important;
-  width: calc(80% - 22px) !important;
+  width: auto !important;
 }
 </style>
