--- a/app/views/admin/seo_data/_tinymce.html.erb
+++ b/app/views/admin/seo_data/_tinymce.html.erb
@@ -2,7 +2,7 @@
 <%= render partial: "tinymce_youtube_plugin" %>
 <script>
 tinymce.init({
-  selector: '#schedule_item_description',
+  selector: '#seo_data_paragraph',
   plugins: "link image code paste media youtubeIframe",
   // TODO: to be added only if secure loading of plugin.js below is not working
   // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
@@ -13,38 +13,13 @@ tinymce.init({
   paste_data_images: true,
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
   // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
-  editorObject: {'id': 'schedule_item_description'},
+  editorObject: {'id': 'question_question'},
   video_template_callback: (data) => {
-    return '<audio controls>' + '\n<source src="' + data.source1 + '"' + (data.source1mime ? ' type="' + data.source1mime + '"' : '') + ' />\n' + '</audio>';
+    return '<audio controls controlslist="nodownload">' + '\n<source src="' + data.source1 + '"' + (data.source1mime ? ' type="' + data.source1mime + '"' : '') + ' />\n' + '</audio>';
   },
-  file_picker_callback: function(cb, value, meta) {
-    if (meta.filetype != "media") {
-      return;
-    }
-    var input = document.createElement('input');
-    input.setAttribute('type', 'file');
-    input.setAttribute('accept', '*/*');
-
-    input.onchange = function() {
-      const data = new FormData();
-      data.append('file', this.files[0]);
-      data.append('filename', this.files[0].name);
-
-      fetch('https://www.neetprep.com/api/v1/fileUpload/fileUpload', {
-        method: 'POST',
-        body: data,
-      }).then((response) => {
-        response.json().then((body) => {
-          cb(body.location);
-        });
-      });
-    };
-    input.click();
-  },
-  file_picker_type: 'media',
   setup: function (editor) {
     editor.on('blur', function (e) {
-      document.getElementById('schedule_item_description').value = editor.getContent();
+      document.getElementById('question_question').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
     editor.settings.images_dataimg_filter = function () {return undefined;};
