--- a/app/views/admin/courses/_tinymce.html.erb
+++ b/app/views/admin/courses/_tinymce.html.erb
@@ -13,7 +13,7 @@ tinymce.init({
   paste_data_images: true,
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
   // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
-  editorObject: {'id': 'question_question'},
+  editorObject: {'id': 'course_description'},
   video_template_callback: (data) => {
     return '<audio controls controlslist="nodownload">' + '\n<source src="' + data.source1 + '"' + (data.source1mime ? ' type="' + data.source1mime + '"' : '') + ' />\n' + '</audio>';
   },
