allw sales team to give full access, added a scope to moniter course invitation

--- a/app/views/course_invitations/multiple_courses.html.erb
+++ b/app/views/course_invitations/multiple_courses.html.erb
@@ -50,9 +50,9 @@
       return
     }
 
-    if(admin_role == 'sales' && new Date(expiry) > today) {
-      alert('can not send access for more than 2 days');
-    }
+    // if(admin_role == 'sales' && new Date(expiry) > today) {
+    //   alert('can not send access for more than 2 days');
+    // }
 
     let url = window.location.origin + "/course_invitations/createCourseInvitation";
     $.ajax({
