--- a/app/views/admin/questions/_hidden_test_ids.html.erb
+++ b/app/views/admin/questions/_hidden_test_ids.html.erb
@@ -1,5 +1,5 @@
 <% tests.each do |test| %>
-  <% if not Test.pluck("id").include?(test.id) %>
+  <% if not Test.order(createdAt: :desc).limit(100).pluck("id").include?(test.id) %>
     <input type="hidden" name="question[test_ids][]" value="<%=test.id%>"/>
   <% end %>
 <% end %>
