changes to fix https://trello.com/c/6WM6Wvob/740-question-edit-page-removing-test-issue

--- a/app/views/admin/questions/_hidden_test_ids.html.erb
+++ b/app/views/admin/questions/_hidden_test_ids.html.erb
@@ -1,5 +1,10 @@
+<% added_hidden_test_field = false %>
 <% tests.each do |test| %>
   <% if not Test.order(createdAt: :desc).limit(100).pluck("id").include?(test.id) %>
     <input type="hidden" name="question[test_ids][]" value="<%=test.id%>"/>
+    <% added_hidden_test_field = true %>
   <% end %>
+<% end %>
+<% if added_hidden_test_field == false %>
+  <input type="hidden" name="question[test_ids][]" value=""/>
 <% end %>
