--- a/app/views/test_attempts/aryan_raj_toppers.html.erb
+++ b/app/views/test_attempts/aryan_raj_toppers.html.erb
@@ -11,17 +11,19 @@
 <h2 style="margin-left: 16px; margin-top: 30px">Aryan Raj Test Series Toppers</h2>
 <table style="margin-left: 16px; width:50%; margin-top: 30px">
   <tr class="header" style="text-align: center;">
-    <th>User Id</th>
     <th>User Name</th>
-    <th>Test Name</th>
-    <th>Test Score</th>
+    <th>User Phone</th>
+    <% @tests.each do |test|%>
+      <th><%= raw('<a target="_blank" href="/admin/tests/' + test[0].to_s + '">' + test[1].to_s + '</a>') %></th>
+    <% end %>
   </tr>
   <% @report_data.each do |key, value| %>
     <tr style="text-align: center;">
-      <td><%= raw('<a target="_blank" href="/admin/users/' + key.to_s + '">' + key.to_s + '</a>') %></td>
-      <td><%= value[0].to_s %></td>
-      <td><%= value[1].to_s %></td>
-      <td><%= value[2].to_s %></td>
+      <td><%= raw('<a target="_blank" href="/admin/users/' + key.to_s + '">' + value["name"].to_s + '</a>') %></td>
+      <td><%= value["phone"].to_s %></td>
+      <% @tests.each do |test|%>
+        <th><%=value[test[0].to_s]%></th>
+      <% end %>
     </tr>
   <% end %>
 </table>
