--- a/app/views/doubt_answers/answer.html.erb
+++ b/app/views/doubt_answers/answer.html.erb
@@ -61,13 +61,14 @@
         <p>Add video to answer</p>
         <select id="videos">
           <option value=''>Select Video</option>
-          <% Topic.find(@doubt.topicId).videos.pluck("id", "name").each do |video| %>
-            <%= raw("<option value='" + video.to_s + "'>" + video.to_s + "</option>") %>
+          <% if not @doubt.topicId.nil? %>
+            <% Topic.find(@doubt.topicId).videos.pluck("id", "name").each do |video| %>
+              <%= raw("<option value='" + video.to_s + "'>" + video.to_s + "</option>") %>
+            <% end %>
           <% end %>
         </select>
         <button onclick="addVideo()">Add selected video</button>
       </div>
-    <% end %>
 
     <style>
       .loader {
